--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div>
-                <a href="/#/sing">Sign-In</a>
+                <a href="/#/signin">Sign-In</a>
                 <a href="/#/cart">Cart</a>
             </div>
         </header>
