adding header component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,11 @@
 </head>
 
 <body>
+    <div class="overlay" id="loading-overlay">Loading...</div>
+    <div class="overlay" id="message-overlay"></div>
     <div class="grid-container">
-        <header>
+        <header id="header-container"></header>
+        <!-- <header>
             <div class="brand">
                 <a href="/#/">jsamazone</a>
             </div>
@@ -29,11 +32,11 @@
                 <a href="/#/signin">Sign-In</a>
                 <a href="/#/cart">Cart</a>
             </div>
-        </header>
+        </header> -->
         <!-- <aside id="aside-container">
         </aside> -->
-        <main id="main-container">
-            <!-- <div>
+        <!-- <main id="main-container">
+            <div>
                 <ul class="products">
                     <li>
                         <div class="product">
@@ -126,8 +129,9 @@
                         </div>
                     </li>
                 </ul>
-            </div> -->
-        </main>
+            </div>
+        </main> -->
+        <main id="main-container"></main>
         <footer>
           All rights reserved: sambabhouria@gmail.com
         </footer>
