--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,8 @@
     <div class="overlay" id="message-overlay"></div>
     <div class="grid-container">
         <header id="header-container"></header>
+        <aside id="aside-container"></aside>
+        <main id="main-container"></main>
         <!-- <header>
             <div class="brand">
                 <a href="/#/">jsamazone</a>
@@ -131,7 +133,6 @@
                 </ul>
             </div>
         </main> -->
-        <main id="main-container"></main>
         <footer>
           All rights reserved: sambabhouria@gmail.com
         </footer>
